# bielik-nest-builders

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: agent-types.md  known-limitations.md  nat-briefing-for-bielik-dev.md  part3-presenter-script.md  vllm-deployment.md
part1-setup/: verify_setup.py
part2-orchestration/: README.md
part2-orchestration/01_basic_agent/: config.yaml  notebook.ipynb  run.py
part2-orchestration/02_langchain_agent/: config.yaml  functions.py  notebook.ipynb  run.py
part2-orchestration/03_crewai_agent/: config.yaml  functions.py  notebook.ipynb  run.py
part2-orchestration/04_unified_workflow/: config.yaml  functions.py  notebook.ipynb  run.py
part3-profiling/: README.md
part3-profiling/01_observability/: config.yaml  notebook.ipynb
part3-profiling/02_cost_tracking/: config.yaml  notebook.ipynb
part3-profiling/03_optimization/: config.yaml  config_eval.yaml  eval_dataset.json  notebook.ipynb
slides/: build.py  index.html  presentation.html  serve.py  slide-00-title.html  slide-01-overview.html  slide-02-react.html  slide-03-tool-calling.html  slide-04-rewod.html  slide-04-rewoo.html  slide-05-plan-execute.html  slide-06-reflexion.html  slide-07-lats.html  slide-08-multi-agent.html  slide-09-comparison.html  slide-10-takeaway.html  slides.js  speaker-notes.js  styles.css
workshop_agents/: crewai_writing_crew.py  langchain_research_agent.py  register.py
